--- a/styles/epitech-norm-linter.less
+++ b/styles/epitech-norm-linter.less
@@ -1,8 +1,19 @@
-// The ui-variables file is provided by base themes provided by Atom.
-//
-// See https://github.com/atom/atom-dark-ui/blob/master/styles/ui-variables.less
-// for a full listing of what's available.
+/* Ref: https://github.com/atom/one-dark-ui/blob/master/styles/ui-variables.less */
 @import "ui-variables";
-
-.epitech-norm-linter {
+atom-text-editor::shadow .linter-highlight, .linter-highlight {
+  &.norme {
+    /* Style for Message Badges */
+    &:not(.line-number) {
+      background-color: @background-color-info;
+      color: white;
+    }
+    /* Style for Gutter */
+    .linter-gutter {
+      color: @background-color-info;
+    }
+    /* Style for the text editor highlight */
+    .region {
+      border-bottom: 1px dashed @background-color-info;
+    }
+  }
 }
